...
    <Button
        android:text="@string/by_subject"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/bySubject" />
    <Button
        android:text="@string/by_name"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/byName" />

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/nameLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameToSearch"
            android:hint="@string/find_tutors_tutor_s_name"
            android:textSize="20sp"
            android:layout_weight="4" />

        <Button
            android:text="@string/find_tutor_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:id="@+id/searchByName" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/courseList"/>

    <TextView
        android:text="@string/find_tutors_show_full_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="18sp"
        android:paddingTop="15dp"
        android:id="@+id/showFullList"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal|bold|italic" />

</LinearLayout>
