<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:padding="10dp">

    <ImageView android:id="@+id/coursePicture"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginEnd="15dp"
        android:maxHeight="42dp"
        android:maxWidth="42dp"
        android:scaleType="fitCenter"
        android:layout_weight="1"
        android:background="@null"
        android:contentDescription="@string/course_picture"/>

    <TextView android:id="@+id/courseName"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:textStyle="normal"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="3"/>


</LinearLayout>